# crypto-staking-platform

./: .env.example  .gitignore  CICD_AND_SONARQUBE.md  FINAL_WORKING_STATUS.md  FIXED_STATUS.md  GITHUB_PUSH_INSTRUCTIONS.md  Makefile  README.md  RUNNING_SERVICES_FINAL.md  SERVICES_STATUS.md  claude.md  docker-compose-infra.yml  docker-compose.yml  requirements.md  sonar-project.properties
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci-debug.yml  ci-simple.yml  ci.yml  pr-checks.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1754204758857-xg765zp6f.txt  session-1754204758861-tt361q5ox-auto-save-1754204788862.json
.swarm/: memory.db
docs/: SPRINT_1_SUMMARY.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/.claude-flow/metrics/: performance.json  task-metrics.json
frontend/.swarm/: memory.db
frontend/src/app/: layout.tsx  page.tsx
infrastructure/k8s/: api-gateway.yaml  consul.yaml  frontend.yaml  kustomization.yaml  namespace.yaml  node-service-template.yaml  rabbitmq.yaml  secrets.yaml
infrastructure/monitoring/: prometheus.yml
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/.claude-flow/metrics/: performance.json  task-metrics.json
services/api-gateway/.swarm/: memory.db
services/api-gateway/src/: config.rs  error.rs  main.rs  main_full.rs  middleware.rs  models.rs  routes.rs  service_discovery.rs
services/api-gateway/tests/: integration_test.rs
services/node-template/: Cargo.toml  Dockerfile  README.md
services/node-template/.claude-flow/metrics/: performance.json  task-metrics.json
services/node-template/.swarm/: memory.db
services/node-template/src/: blockchain.rs  config.rs  error.rs  health.rs  main.rs  metrics.rs  service_registry.rs
services/node-template/tests/: integration_test.rs
(+6 files in other folders)
