[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
consul = "0.4"
config = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
mockall = "0.12"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }